--- a/docs/SASS/abstracts/_mixins.scss
+++ b/docs/SASS/abstracts/_mixins.scss
@@ -2,14 +2,26 @@
   @if $breakpoint == iconFix {
     @media only screen and (min-width: 29.38em) { @content };    //470px
   }
-  @if $breakpoint == nav {
-    @media only screen and (min-width: 48.0em) { @content }; //768
-  }
   @if $breakpoint == phone {
     @media only screen and (min-width: 37.5em) { @content };    //600px
   }
+  @if $breakpoint == microLuma {
+    @media only screen and (min-width: 39.9em) { @content };    //639px
+  }
+  @if $breakpoint == microLuma2 {
+    @media only screen and (min-width: 40.1em) { @content };    //641px
+  }
+  @if $breakpoint == nav {
+    @media only screen and (min-width: 48.0em) { @content }; //768
+  }
   @if $breakpoint == tab-port {
     @media only screen and (min-width: 56.25em) { @content };     //900px
+  }
+  @if $breakpoint == ipadPro {
+    @media only screen and (min-width: 63.9em) { @content };     //1023px
+  }
+  @if $breakpoint == ipadPro2 {
+    @media only screen and (min-width: 64.1em) { @content };     //1025px
   }
   @if $breakpoint == tab-land {
     @media only screen and (min-width: 75em) { @content };    //1200px
