fixed everything to now say my name instead of my company website

--- a/docs/SASS/base/_utilities.scss
+++ b/docs/SASS/base/_utilities.scss
@@ -11,3 +11,8 @@
   height: 5rem;
   width: 5rem;
 }
+
+.moveInBottom {
+  animation: moveInBottom 1s ease-in;
+  animation-fill-mode: backwards;
+}
