--- a/docs/SASS/layout/_navigationTabs.scss
+++ b/docs/SASS/layout/_navigationTabs.scss
@@ -8,21 +8,28 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
   &__header {
 
     color: $color-white;
-    animation: moveInBottom 1s ease-out;
-    animation-fill-mode: backwards;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
+    //animation: moveInBottom 1s ease-in;
+    //animation-fill-mode: backwards;
+
+    //display: flex;
+    //justify-content: center;
+    //align-items: center;
+    //height: 80vh;
 
     
     &-text {
-      transition: all .2s;
-      position: relative;
+      //transition: all .2s;
+      //position: relative;
+      animation: moveInBottom 1s ease-in;
+      animation-fill-mode: backwards;
       z-index: 999;
       font-size: 48%;
 
@@ -31,6 +38,15 @@
       }
       @include respond(tab-port) {
           font-size: 100%;
+      }
+
+      &-2 {
+        animation: moveInBottom 1s ease-in;
+        animation-fill-mode: backwards;
+        animation-delay: .7s;
+        @include respond(tab-port) {
+          padding-bottom: 10rem;
+        }
       }
     }
 
