--- a/docs/SASS/layout/_navigationTabs.scss
+++ b/docs/SASS/layout/_navigationTabs.scss
@@ -30,6 +30,7 @@
       //position: relative;
       animation: moveInBottom 1s ease-in;
       animation-fill-mode: backwards;
+      position: relative;
       z-index: 999;
       font-size: 48%;
 
