--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -54,7 +54,7 @@ body {
   box-sizing: border-box; }
 
 .text__small {
-  font-size: 1.5rem; }
+  font-size: 1.6rem; }
 
 .text--extraSmall {
   font-size: 1rem; }
@@ -83,9 +83,16 @@ body {
   background-color: #f7f7f7; }
   .intro-text {
     text-align: center;
-    font-size: 50%;
+    font-size: 2rem;
     padding: 15rem 1rem 0 1rem;
     max-width: 100rem; }
+    @media only screen and (min-width: 37.5em) {
+      .intro-text {
+        font-size: 2.5rem;
+        padding: 15rem 2rem 0 2rem; } }
+    @media only screen and (min-width: 112.5em) {
+      .intro-text {
+        font-size: 3rem; } }
   .intro-button {
     margin-bottom: 15rem; }
   .intro--animated {
@@ -298,8 +305,7 @@ a.intro-Contact-link {
     border-radius: 2rem; }
     @media only screen and (min-width: 37.5em) {
       .About__cards {
-        width: 70%;
-        font-size: 2.5rem; } }
+        width: 70%; } }
     @media only screen and (min-width: 56.25em) {
       .About__cards {
         width: 50%; } }
@@ -343,7 +349,7 @@ a.intro-Contact-link {
     .Tabs__option-text {
       display: none;
       color: white;
-      font: 1.6rem;
+      font-size: 1.6rem;
       padding-left: 2rem; }
       @media only screen and (min-width: 56.25em) {
         .Tabs__option-text {
@@ -381,27 +387,52 @@ a.intro-Contact-link {
 
 .TabContent {
   position: absolute;
-  height: 140rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
-  margin-top: 20%; }
+  margin-top: 25%; }
   @media only screen and (min-width: 48em) {
     .TabContent {
       width: 80%;
+      margin: 20% 10%; } }
+  @media only screen and (min-width: 75em) {
+    .TabContent {
       margin: 10% 10%; } }
   .TabContent__header {
-    margin: 3rem 0 2rem 0; }
+    margin: 3rem 0 2rem 0;
+    color: #fff;
+    font-size: 70%;
+    padding: 0 1.5rem; }
   .TabContent__images-left {
     display: none; }
     @media only screen and (min-width: 48em) {
       .TabContent__images-left {
         display: block; } }
   .TabContent__images-mid {
-    width: 95%; }
+    width: 75%;
+    max-height: 80%; }
   .TabContent__images-right {
     display: none; }
     @media only screen and (min-width: 48em) {
       .TabContent__images-right {
         display: block; } }
+  .TabContent__link {
+    font-size: 60%; }
+    .TabContent__link-left {
+      text-decoration: none;
+      color: #fff;
+      text-shadow: 2px 2px #000;
+      margin-right: 1rem; }
+    .TabContent__link-right {
+      text-decoration: none;
+      color: #fff;
+      text-shadow: 2px 2px #000;
+      margin-left: 1rem; }
+    .TabContent__link::before, .TabContent__link::after {
+      content: "";
+      border: 0 solid #e2e8f0; }
 
 .contactForm {
   position: relative; }
@@ -530,6 +561,9 @@ a.intro-Contact-link {
     @media only screen and (min-width: 29.38em) {
       .footer__home-copyright {
         padding: 20rem 2rem 0 2rem; } }
+    @media only screen and (min-width: 75em) {
+      .footer__home-copyright {
+        font-size: 50%; } }
   .footer__home-iconsContainer {
     display: flex;
     justify-content: center;
@@ -632,17 +666,18 @@ a.intro-Contact-link {
     background-image: linear-gradient(105deg, transparent 0%, transparent 50%, #fff 50%); }
 
 .navigation__link {
-  backface-visibility: hidden;
-  display: inline-block;
-  font-size: 3rem;
-  font-weight: 300;
-  padding: 1rem 2rem;
-  color: #fff;
-  text-decoration: none;
-  text-transform: uppercase;
-  background-image: linear-gradient(105deg, transparent 0%, transparent 50%, #fff 50%);
-  background-size: 220%;
-  transition: all .4s; }
+  backface-visibility: hidden; }
+  .navigation__link:link, .navigation__link:visited {
+    display: inline-block;
+    font-size: 3rem;
+    font-weight: 300;
+    padding: 1rem 2rem;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-image: linear-gradient(105deg, transparent 0%, transparent 50%, #fff 50%);
+    background-size: 220%;
+    transition: all .4s; }
   .navigation__link:link span, .navigation__link:visited span {
     margin-right: 1.5rem;
     display: inline-block; }
@@ -705,12 +740,15 @@ a.intro-Contact-link {
   .normNav__item {
     height: 5rem;
     border: none;
-    padding: 2rem;
-    margin: 3rem;
+    padding: 3rem 2rem;
+    margin-right: 2rem;
     font-size: 2rem;
     background-color: inherit;
     color: #fff;
     transition: color .2s; }
+    @media only screen and (min-width: 112.5em) {
+      .normNav__item {
+        font-size: 2.5rem; } }
   .normNav__item:hover {
     color: #f7f7f7; }
   .normNav__item:focus {
@@ -737,20 +775,20 @@ a.intro-Contact-link {
       animation-fill-mode: backwards;
       position: relative;
       z-index: 999;
-      font-size: 48%; }
+      font-size: 3rem; }
       @media only screen and (min-width: 37.5em) {
         .Home__header-text {
-          font-size: 60%; } }
+          font-size: 4rem; } }
       @media only screen and (min-width: 56.25em) {
         .Home__header-text {
-          font-size: 100%; } }
+          font-size: 5rem; } }
+      @media only screen and (min-width: 112.5em) {
+        .Home__header-text {
+          font-size: 7rem; } }
       .Home__header-text-2 {
         animation: moveInBottom 1s ease-in;
         animation-fill-mode: backwards;
         animation-delay: .7s; }
-        @media only screen and (min-width: 56.25em) {
-          .Home__header-text-2 {
-            padding-bottom: 10rem; } }
     .Home__header-text:hover {
       transform: translateY(-3px);
       text-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.2);
