--- a/docs/SASS/base/_base.scss
+++ b/docs/SASS/base/_base.scss
@@ -11,10 +11,22 @@ html {
 	font-size: 62.5%;
 	font-family: 'Titillium Web', sans-serif;
 	scroll-behavior: smooth;
+
+	// @include respond(phone) {
+	// 	font-size: 67%;
+	// }
+
+	// @include respond(tab-port) {
+	// 	font-size: 70%;
+	// }
+
+	// @include respond(tab-land) {
+	// 	font-size: 80%;
+	// }
+
+	
 }
 
 body {
 	box-sizing: border-box;
 }
-
-//1rem = 10px
