--- a/docs/SASS/components/_aboutPage.scss
+++ b/docs/SASS/components/_aboutPage.scss
@@ -28,12 +28,11 @@
     margin: 10rem 0 5rem 0;
     @include respond(phone) {
       width: 70%;
-      font-size: $fontSize-2_5
     }
     @include respond(tab-port) {
       width: 50%;
     }
-    font-size: 2rem;
+    font-size: $fontSize-2;
     border: 1px solid $color-white;
     border-radius: 2rem;
 
