--- a/docs/SASS/components/_contactForm.scss
+++ b/docs/SASS/components/_contactForm.scss
@@ -90,7 +90,7 @@
   }
 
   &-header {
-    font-size: 3rem;
+    font-size: $fontSize-3;
     position: relative;
     padding: 5rem 2rem 2rem 2rem;
     @include respond(nav) {
