--- a/docs/SASS/components/_homeIntro.scss
+++ b/docs/SASS/components/_homeIntro.scss
@@ -9,7 +9,14 @@
 
   &-text {
     text-align: center;
-    font-size: 50%;
+    font-size: $fontSize-2;
+    @include respond(phone) {
+      font-size: $fontSize-2_5;
+      padding: 15rem 2rem 0 2rem;
+    }
+    @include respond(big-desktop) {
+      font-size: $fontSize-3;
+    }
     padding: 15rem 1rem 0 1rem;
     max-width: 100rem;
   }
