--- a/docs/SASS/components/_portfolioContainer.scss
+++ b/docs/SASS/components/_portfolioContainer.scss
@@ -38,7 +38,7 @@
       display: none;
       // padding: 0 0 0 2rem;
       color: white;
-      font: $default-font-size;
+      font-size: $default-font-size;
       padding-left: 2rem;
       @include respond(tab-port) {
         display: inline-block;
@@ -88,17 +88,29 @@
 }
 .TabContent {
   position: absolute;
-  height: 140rem; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  // height: 140rem; 
   width: 100%;
-  margin-top: 20%;
+  margin-top: 25%;
   // background-color: orangered;
   @include respond(nav) {
     width: 80%;
+    margin: 20% 10%;
+  }
+
+  @include respond(tab-land) {
     margin: 10% 10%;
   }
 
+
   &__header {
     margin: 3rem 0 2rem 0;
+    color: $color-white;
+    font-size: 70%;
+    padding: 0 1.5rem
 
   }
 
@@ -113,7 +125,9 @@
     }
 
     &-mid {
-      width: 95%;
+      width: 75%;
+      max-height: 80%;
+    
 
     }
 
@@ -122,6 +136,31 @@
       @include respond(nav) {
         display: block;
       }
+    }
+  }
+
+  &__link {
+    font-size: 60%;
+
+    &-left {
+      text-decoration: none;
+      color: $color-white;
+      text-shadow: 2px 2px $color-black;
+      margin-right: 1rem;
+
+    }
+
+    &-right{
+      text-decoration: none;
+      color: $color-white;
+      text-shadow: 2px 2px $color-black;
+      margin-left: 1rem;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      border: 0 solid #e2e8f0;
     }
   }
 
