--- a/docs/SASS/layout/_footer.scss
+++ b/docs/SASS/layout/_footer.scss
@@ -15,6 +15,10 @@
       @include respond(iconFix){
         padding: 20rem 2rem 0 2rem;
       }
+
+      @include respond(tab-land){
+        font-size: 50%;
+      }
     }
 
     &-iconsContainer {
@@ -52,7 +56,7 @@
     //padding: 0 1rem 0 1rem;
     font-size: 1.5rem;
     @include respond(phone) {
-      font-size: 2rem;
+      font-size: $fontSize-2;
       width: 22rem;
     }
 
@@ -68,6 +72,6 @@
   font-size: 1.5rem;
   text-align: center;
   @include respond(phone) {
-    font-size: 2rem;
+    font-size: $fontSize-2;
   }
 }
