--- a/docs/SASS/layout/_navigation.scss
+++ b/docs/SASS/layout/_navigation.scss
@@ -70,8 +70,8 @@
 
   &__link {
     backface-visibility: hidden;
-    //&:link,
-    //&:visited {
+    &:link,
+    &:visited {
       display: inline-block;
       font-size: $fontSize-3;
       font-weight: 300;
@@ -82,6 +82,7 @@
       background-image: linear-gradient(105deg, transparent 0%, transparent 50%, $color-white 50%);
       background-size: 220%;
       transition: all .4s;
+    }
 
       &:link,
       &:visited {
