--- a/docs/SASS/layout/_navigationTabs.scss
+++ b/docs/SASS/layout/_navigationTabs.scss
@@ -14,40 +14,35 @@
   flex-direction: column;
 
   &__header {
+    // height: 6rem;
 
     color: $color-white;
-    //animation: moveInBottom 1s ease-in;
-    //animation-fill-mode: backwards;
-
-    //display: flex;
-    //justify-content: center;
-    //align-items: center;
-    //height: 80vh;
 
     
     &-text {
-      //transition: all .2s;
-      //position: relative;
       animation: moveInBottom 1s ease-in;
       animation-fill-mode: backwards;
       position: relative;
       z-index: 999;
-      font-size: 48%;
+      font-size: $fontSize-3;
 
       @include respond(phone) {
-          font-size: 60%;
+        font-size: 4rem;
       }
       @include respond(tab-port) {
-          font-size: 100%;
+        font-size: 5rem;
+      }
+      @include respond(big-desktop) {
+        font-size: 7rem;
       }
 
       &-2 {
         animation: moveInBottom 1s ease-in;
         animation-fill-mode: backwards;
         animation-delay: .7s;
-        @include respond(tab-port) {
-          padding-bottom: 10rem;
-        }
+        // @include respond(tab-port) {
+        //   padding-bottom: 10rem;
+        // }
       }
     }
 
