--- a/docs/SASS/layout/_normalNavigation.scss
+++ b/docs/SASS/layout/_normalNavigation.scss
@@ -14,9 +14,12 @@
   &__item {
     height: 5rem;
     border: none;
-    padding: 2rem;
-    margin: 3rem;
-    font-size: 2rem;
+    padding: 3rem 2rem;
+    margin-right: 2rem;
+    font-size: $fontSize-2;
+    @include respond(big-desktop) {
+      font-size: $fontSize-2_5;
+    }
     background-color: inherit;
 	color: $color-white;
 	transition: color .2s;
