--- a/docs/SASS/components/_portfolioContainer.scss
+++ b/docs/SASS/components/_portfolioContainer.scss
@@ -98,18 +98,14 @@
   // background-color: orangered;
   @include respond(nav) {
     width: 80%;
-    margin: 20% 10%;
-  }
-
-  @include respond(tab-land) {
-    margin: 10% 10%;
+    margin: 10%;
   }
 
 
   &__header {
     margin: 3rem 0 2rem 0;
     color: $color-white;
-    font-size: 70%;
+    font-size: 80%;
     padding: 0 1.5rem
 
   }
@@ -126,7 +122,7 @@
 
     &-mid {
       width: 75%;
-      max-height: 80%;
+      max-height: 70%;
     
 
     }
@@ -141,6 +137,7 @@
 
   &__link {
     font-size: 60%;
+    margin-top: 3rem;
 
     &-left {
       text-decoration: none;
@@ -166,38 +163,142 @@
 
 
   &__description {
+    color: $color-white;
+    font-size: $fontSize-2;
+    // @include respond(tab-port) {
+      max-width: 50rem;
+
+      @include respond(tab-port) {
+        max-width: 70rem;
+      }
+    // }
+
+    // @include respond(nav) {
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    //   flex-direction: column;
+    // }
+    
 
     &-tech {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 0 2rem;
+      margin-top: 8rem;
+
+      @include respond(nav) {
+        flex-direction: row;
+      }
+      
+      
+
+      
 
       &-left {
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
+        // transform: translateY(-.5rem);
+        // font-size: 80%;
+
+        &-tech {
+          // transform: translateY(.5rem);
+
+          margin-left: 1rem;
+        }
 
       }
 
       &-right {
+        margin-top: 2rem;
+        
+        @include respond(nav) {
+          margin-left: 5rem;
+          text-align: start;
+        }
+        
 
       }
     }
 
 
     &-intro {
+      margin-top: 5rem;
+      padding: 0 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      @include respond(nav) {
+        flex-direction: row;
+      }
+
+      &-challenge {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+      }
 
       &-left {
+        max-height: 3rem;
+        max-width: 3rem;
 
       }
 
       &-right {
+        font-size: $fontSize-2;
+        
+        margin-top: 2rem;
+      
+        @include respond(nav) {
+          margin-left: 5rem;
+          text-align: start;
+        }
 
       }
     }
 
     
     &-goal {
+      margin-top: 5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 0 2rem;
+      @include respond(nav) {
+        flex-direction: row;
+      }
 
       &-left {
+        display: flex;
+        @include respond(nav) {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: row;
+        }
+
+        &-1 {
+          max-height: 3.5rem;
+           max-width: 3.5rem;
+
+        }
+        &-2 {
+          margin-left: 1rem;
+        }
 
       }
 
       &-right {
+        @include respond(nav) {
+          margin-left: 10rem;
+          text-align: start;
+        }
+        padding-bottom: 3rem;
 
       }
     }
