--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -396,14 +396,11 @@ a.intro-Contact-link {
   @media only screen and (min-width: 48em) {
     .TabContent {
       width: 80%;
-      margin: 20% 10%; } }
-  @media only screen and (min-width: 75em) {
-    .TabContent {
-      margin: 10% 10%; } }
+      margin: 10%; } }
   .TabContent__header {
     margin: 3rem 0 2rem 0;
     color: #fff;
-    font-size: 70%;
+    font-size: 80%;
     padding: 0 1.5rem; }
   .TabContent__images-left {
     display: none; }
@@ -412,14 +409,15 @@ a.intro-Contact-link {
         display: block; } }
   .TabContent__images-mid {
     width: 75%;
-    max-height: 80%; }
+    max-height: 70%; }
   .TabContent__images-right {
     display: none; }
     @media only screen and (min-width: 48em) {
       .TabContent__images-right {
         display: block; } }
   .TabContent__link {
-    font-size: 60%; }
+    font-size: 60%;
+    margin-top: 3rem; }
     .TabContent__link-left {
       text-decoration: none;
       color: #fff;
@@ -433,6 +431,84 @@ a.intro-Contact-link {
     .TabContent__link::before, .TabContent__link::after {
       content: "";
       border: 0 solid #e2e8f0; }
+  .TabContent__description {
+    color: #fff;
+    font-size: 2rem;
+    max-width: 50rem; }
+    @media only screen and (min-width: 56.25em) {
+      .TabContent__description {
+        max-width: 70rem; } }
+    .TabContent__description-tech {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 0 2rem;
+      margin-top: 8rem; }
+      @media only screen and (min-width: 48em) {
+        .TabContent__description-tech {
+          flex-direction: row; } }
+      .TabContent__description-tech-left-tech {
+        margin-left: 1rem; }
+      .TabContent__description-tech-right {
+        margin-top: 2rem; }
+        @media only screen and (min-width: 48em) {
+          .TabContent__description-tech-right {
+            margin-left: 5rem;
+            text-align: start; } }
+    .TabContent__description-intro {
+      margin-top: 5rem;
+      padding: 0 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column; }
+      @media only screen and (min-width: 48em) {
+        .TabContent__description-intro {
+          flex-direction: row; } }
+      .TabContent__description-intro-challenge {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start; }
+      .TabContent__description-intro-left {
+        max-height: 3rem;
+        max-width: 3rem; }
+      .TabContent__description-intro-right {
+        font-size: 2rem;
+        margin-top: 2rem; }
+        @media only screen and (min-width: 48em) {
+          .TabContent__description-intro-right {
+            margin-left: 5rem;
+            text-align: start; } }
+    .TabContent__description-goal {
+      margin-top: 5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 0 2rem; }
+      @media only screen and (min-width: 48em) {
+        .TabContent__description-goal {
+          flex-direction: row; } }
+      .TabContent__description-goal-left {
+        display: flex; }
+        @media only screen and (min-width: 48em) {
+          .TabContent__description-goal-left {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row; } }
+        .TabContent__description-goal-left-1 {
+          max-height: 3.5rem;
+          max-width: 3.5rem; }
+        .TabContent__description-goal-left-2 {
+          margin-left: 1rem; }
+      .TabContent__description-goal-right {
+        padding-bottom: 3rem; }
+        @media only screen and (min-width: 48em) {
+          .TabContent__description-goal-right {
+            margin-left: 10rem;
+            text-align: start; } }
 
 .contactForm {
   position: relative; }
